// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateButton should render correctly when disabled 1`] = `
<Row
  className="mt-5"
  tag="div"
>
  <Col
    className="text-center"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs={12}
  >
    <Button
      color="primary"
      disabled={false}
      onClick={[Function]}
      tag="button"
    />
  </Col>
</Row>
`;

exports[`UpdateButton should render correctly when enabled 1`] = `
<Row
  className="mt-5"
  tag="div"
>
  <Col
    className="text-center"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs={12}
  >
    <Button
      color="primary"
      disabled={true}
      onClick={[Function]}
      tag="button"
    />
  </Col>
</Row>
`;
